errormx
MATRIXNEW.cpp: In member function ‘void MATRIX::matrix_add(MATRIX&)’:
MATRIXNEW.cpp:57:31: error: ‘B’ was not declared in this scope
   57 |             C[i][j]=A.C[i][j]+B.C[i][j];
      |                               ^
MATRIXNEW.cpp:65:20: error: no match for ‘operator[]’ (operand types are ‘MATRIX’ and ‘int’)
   65 |             cout<<A[i][j]<<" ";
      |                    ^
MATRIXNEW.cpp: In member function ‘void MATRIX::matrix_mult(MATRIX&)’:
MATRIXNEW.cpp:72:14: error: ‘B’ was not declared in this scope
   72 |     if (A.b!=B.a)
      |              ^
MATRIXNEW.cpp:87:44: error: ‘K’ was not declared in this scope
   87 |                     C[i][j]+=A.C[i][k]*B.C[K][j];
      |                                            ^
MATRIXNEW.cpp: At global scope:
MATRIXNEW.cpp:104:5: error: ‘int MATRIX::matrix_transpose’ is not a static data member of ‘class MATRIX’
  104 | int MATRIX::matrix_transpose(A)
      |     ^~~~~~
MATRIXNEW.cpp:104:30: error: ‘A’ was not declared in this scope
  104 | int MATRIX::matrix_transpose(A)
      |                              ^
MATRIXNEW.cpp:120:6: error: no declaration matches ‘void MATRIX::matrix_trace(MATRIX)’
  120 | void MATRIX::matrix_trace(MATRIX A)
      |      ^~~~~~
MATRIXNEW.cpp:30:14: note: candidate is: ‘void MATRIX::matrix_trace()’
   30 |         void matrix_trace(void);
      |              ^~~~~~~~~~~~
MATRIXNEW.cpp:3:7: note: ‘class MATRIX’ defined here
    3 | class MATRIX
      |       ^~~~~~
MATRIXNEW.cpp: In function ‘int main()’:
MATRIXNEW.cpp:159:35: error: no matching function for call to ‘MATRIX::matrix_get(int&, int&, int&)’
  159 |             A.matrix_get(i,j,value)
      |                                   ^
MATRIXNEW.cpp:26:14: note: candidate: ‘void MATRIX::matrix_get()’
   26 |         void matrix_get();
      |              ^~~~~~~~~~
MATRIXNEW.cpp:26:14: note:   candidate expects 0 arguments, 3 provided
MATRIXNEW.cpp:173:39: error: no matching function for call to ‘MATRIX::matrix_get(int&, int&, int&)’
  173 |                 B.matrix_get(i,j,value);
      |                                       ^
MATRIXNEW.cpp:26:14: note: candidate: ‘void MATRIX::matrix_get()’
   26 |         void matrix_get();
      |              ^~~~~~~~~~
MATRIXNEW.cpp:26:14: note:   candidate expects 0 arguments, 3 provided
MATRIXNEW.cpp:187:34: error: cannot convert ‘MATRIX*’ to ‘MATRIX&’
  187 |             case 1: A.matrix_add(&B);
      |                                  ^~
      |                                  |
      |                                  MATRIX*
MATRIXNEW.cpp:51:33: note:   initializing argument 1 of ‘void MATRIX::matrix_add(MATRIX&)’
   51 | void MATRIX::matrix_add(MATRIX &A)
      |                         ~~~~~~~~^
MATRIXNEW.cpp:189:35: error: cannot convert ‘MATRIX*’ to ‘MATRIX&’
  189 |             case 2: A.matrix_mult(&B);
      |                                   ^~
      |                                   |
      |                                   MATRIX*
MATRIXNEW.cpp:70:34: note:   initializing argument 1 of ‘void MATRIX::matrix_mult(MATRIX&)’
   70 | void MATRIX::matrix_mult(MATRIX &A)
      |                          ~~~~~~~~^
MATRIXNEW.cpp:199:1: error: expected ‘while’ at end of input
  199 | }
      | ^
MATRIXNEW.cpp:199:1: error: expected ‘(’ at end of input
  199 | }
      | ^
      | (
MATRIXNEW.cpp:199:1: error: expected primary-expression at end of input
MATRIXNEW.cpp:199:2: error: expected ‘)’ at end of input
  199 | }
      | ~^
      |  )
MATRIXNEW.cpp:199:2: error: expected ‘;’ at end of input
  199 | }
      | ~^
      |  ;
MATRIXNEW.cpp:199:1: error: expected ‘}’ at end of input
  199 | }
      | ^
MATRIXNEW.cpp:140:1: note: to match this ‘{’
  140 | {
      | ^
dsai@dsai-HCL-Desktop:~/Documents/Akshadha_Int MSc$ ^C
dsai@dsai-HCL-Desktop:~/Documents/Akshadha_Int MSc$ 


